--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "target": "ES2023",
+    "target": "ES2022",
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
@@ -9,17 +9,16 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "strict": false, // Cambia a false para desactivar todas las verificaciones estrictas
+    "noUnusedLocals": false, // Permite variables no utilizadas
+    "noUnusedParameters": false, // Permite parámetros no utilizados
+    "noFallthroughCasesInSwitch": false, // Permite caídas en el switch
+    "noUncheckedSideEffectImports": false // Permite importaciones sin verificar efectos secundarios
   },
   "include": ["vite.config.ts"]
 }
